--- a/advanced/composer.json
+++ b/advanced/composer.json
@@ -30,7 +30,8 @@
         "kartik-v/yii2-bootstrap4-dropdown": "@dev",
         "kartik-v/yii2-icons": "@dev",
         "kartik-v/yii2-export": "dev-master",
-        "kartik-v/yii2-widget-depdrop": "dev-master"
+        "kartik-v/yii2-widget-depdrop": "dev-master",
+        "yiisoft/yii2-bootstrap5": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
