--- a/advanced/composer.json
+++ b/advanced/composer.json
@@ -16,23 +16,24 @@
     "require": {
         "php": ">=5.6.0",
         "yiisoft/yii2": "~2.0.14",
-        "yiisoft/yii2-bootstrap4": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "hail812/yii2-adminlte3": "^1.1",
         "biladina/yii2-ajaxcrud-bs4": "^2.0",
-        "kartik-v/yii2-widget-select2": "^2.2",
+        "kartik-v/yii2-widget-select2": "@dev",
         "kartik-v/yii2-money": "dev-master",
         "yiisoft/yii2-jui": "^2.0",
         "hscstudio/yii2-mimin": "~1.1.5",
         "kartik-v/yii2-editors": "dev-master",
         "scotthuangzl/yii2-google-chart": "dev-master",
         "kartik-v/yii2-widget-fileinput": "@dev",
-        "kartik-v/yii2-bootstrap4-dropdown": "@dev",
+        "kartik-v/yii2-bootstrap5-dropdown": "@dev",
         "kartik-v/yii2-icons": "@dev",
         "kartik-v/yii2-export": "dev-master",
         "kartik-v/yii2-widget-depdrop": "dev-master",
-        "yiisoft/yii2-bootstrap5": "^2.0",
-        "2amigos/qrcode-library": "~1.1"
+        "yiisoft/yii2-bootstrap4": "^2.0",
+        "2amigos/qrcode-library": "~1.1",
+        "kartik-v/yii2-dialog": "dev-master",
+        "kartik-v/yii2-bootstrap4-dropdown": "^1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
